// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesListAddNew should match snapshot when edge 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  noteElementId="12"
  selectedNotesType="edge"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`NotesListAddNew should match snapshot when graph 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  noteElementId="12"
  selectedNotesType="graph"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`NotesListAddNew should match snapshot when node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  noteElementId="12"
  selectedNotesType="node"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
